1.20  16.8.2002
	- Additional patch by Peter Behroozi <peter@@fhpwireless_.com> --Sampo
	- Patch by Mike McCauley mikem@open.com_.au
1.21  6.9.2002
	- Patch by Mike McCauley mikem@open.com_.au
      19.9.2002
	- applied patch from Tim Engler <tim@burntcouch_.com>
      30.10.2002,
        - perl-5.8/gcc-3.2 patch on Makefile.PL from
	  Joern_Hoos@@notes.uni-paderborn._de, lucho@@galix._com,
	  bellis@@saberlogic._com, and simonclewer@@superquote._com
1.22  8.1.2003
	- proxy auth fix from Bill.Muller@@ubsw_..com
      18.2.2003
	- RAND patch from Toni Andjelkovic <toni@soth._at>
1.23  13.6.2003
	- some minor tweaks by many, mainly for RH build
	- memory leak and cleanup patches from Marian Jancar <mjancar@suse._cz>
1.24  25.6.2003
        - write_partial() return value patch from
          Kim Minh Kaplan <kmkaplan@selfoffice._com>
      3.8.2003
        - applied version check fix to Net::SSLeay::Handle.pm
          from Jason Rhinelander <jason@gossamer-threads._com>
      17.8.2003
	- new features: http and raw tcp support
	- fixed apparent STDIO vs. sysread bug in proxy connect
1.25  18.8.2003
    - added tcpecho.pl and tcpcat.pl to MANIFEST
    - fixed some further bugs with TCP read all, etc.
    - fixed some const char pointer warnings
1.30  21.12.2005
	- Fixed the MD5 function for hashsums containing \0
	- Fixed some compile warnings with recent gcc.
	- Fixed do_httpx3:
	  + Don't add additional Host: headers if it's already given
	  + Omit the :$port suffix for standard ports
	  + Thanks to ivan-cpan-rt@420.am
	- Limit the chunk size when reading with tcp_read_all to 0x1000.
	  This fixes various rt tickets.
	- Added patch to allow session caching
	- Mike McCauley and Florian Ragwitz maintain this module now
1.30 + 1  UNRELEASED
	- Only bind X509_STORE_set_trust #if OPENSSL_VERSION_NUMBER >= 0x0090800fL
	- Removed %Filenum_Objects from Net::SSLeay::Handle so unused handles will be freed.
	- Use ppport.h.

#EOF